\name{NEWS}
\title{News for Package \pkg{smacof}}
\encoding{UTF-8}

\section{Changes in Version 1.11-0}{
  \itemize{
    \item Circular unfolding for all unfolding versions implemented.
    }
}

\section{Changes in Version 1.10-8}{
  \itemize{
    \item variable names in morsescales corrected.
    \item adjust argument in plot.driftvec added.
    }
}

\section{Changes in Version 1.10-7}{
  \itemize{
    \item sanity check in smacofConstraint for diagonal C. 
    \item stability coefficient for bootstrap added. 
    }
}

\section{Changes in Version 1.10-6}{
  \itemize{
    \item print.imds() for inverseMDS() added.  
    \item Gravity computation slightly modified.
    \item Vaziri-Xu dataset added. 
    \item Facial expression data added.  
    \item Legend arguments for Procrustes plots added.
    }
}


\section{Changes in Version 1.10-5}{
  \itemize{
    \item some fixes in the output structure of inverseMDS().  
    \item biplotmds() and plot.mdsbi() fixed for single covariate vectors.
    \item Additional conversion options added to sim2diss().
    }
}

\section{Changes in Version 1.10-4}{
  \itemize{
    \item verbose output in uniscale(). 
    \item transform() exported. 
    }
}


\section{Changes in Version 1.10-3}{
  \itemize{
    \item plot.smacofboot() updated.
    }
}

\section{Changes in Version 1.10-2}{
  \itemize{
    \item unfolding() updated with relaxed update that often reduces the iterations by a factor 2).
    \item unfolding() updated with an overal rescaling to the coordinates, distances, and d-hats.
    }
}


\section{Changes in Version 1.10-1}{
  \itemize{
    \item smacofRect() updated to do nonlinear unfolding added matrix and row conditional).
    \item prefscal() is an alias for unfolding() and smacofRect()
    \item plot.smacofR() updated to show row transformations by smacofR and show column labels.
    \item mspline transformation in mds() and smacofSym() now includes an intercept.
    }
}

\section{Changes in Version 1.10-0}{