@@ -33,6 +33,7 @@ export(stress0)
 export(prefscal)
 export(transform)
 export(transPrep)
+export(vmu)
 
 S3method(print, smacofB)
 S3method(summary, smacofB)
@@ -70,3 +71,5 @@ S3method(print, procr)
 S3method(plot, driftvec)
 S3method(print, driftvec)
 S3method(print, imds)
+S3method(plot, vmu)
+S3method(print, vmu)
