@@ -39,7 +39,7 @@ cornmuff: corn muffin and butter
 
 }
 
-\references{Green, P. E. \& Rao, V. (1972). Applied multidimensional scaling. Hinsdale, IL: Dryden.
+\references{Green, P. E. & Rao, V. (1972). Applied multidimensional scaling. Hinsdale, IL: Dryden.
 }
 \examples{
 breakfast
