@@ -10,18 +10,21 @@
 unfolding(delta, ndim = 2, type = c("ratio", "interval", "ordinal", "mspline"),
          conditionality = c("matrix", "row"), lambda = 0.5, omega = 0.1, 
          circle = c("none", "row", "column"), weightmat = NULL, init = NULL, 
+         fixed = c("none", "row", "column"), fixed.coord = NULL,
          ties = c("primary", "secondary"), verbose = FALSE, relax = TRUE, 
          itmax = 10000, eps = 1e-6, spline.degree = 2, spline.intKnots = 2)
 
 smacofRect(delta, ndim = 2, type = c("ratio", "interval", "ordinal", "mspline"),
          conditionality = c("matrix", "row"), lambda = 0.5, omega = 0.1, 
          circle = c("none", "row", "column"), weightmat = NULL, init = NULL, 
+         fixed = c("none", "row", "column"), fixed.coord = NULL,
          ties = c("primary", "secondary"), verbose = FALSE, relax = TRUE, 
          itmax = 10000, eps = 1e-6, spline.degree = 2, spline.intKnots = 2)
 
 prefscal(delta, ndim = 2, type = c("ratio", "interval", "ordinal", "mspline"),
          conditionality = c("matrix", "row"), lambda = 0.5, omega = 0.1, 
          circle = c("none", "row", "column"), weightmat = NULL, init = NULL, 
+         fixed = c("none", "row", "column"), fixed.coord = NULL,
          ties = c("primary", "secondary"), verbose = FALSE, relax = TRUE, 
          itmax = 10000, eps = 1e-6, spline.degree = 2, spline.intKnots = 2)
 }
@@ -36,6 +39,8 @@ prefscal(delta, ndim = 2, type = c("ratio", "interval", "ordinal", "mspline"),
   \item{circle}{If \code{"column"}, the column configurations are restricted to be on a circle, if \code{"row"}, row configurations are on a circle, if \code{"none"}, there are no restrictions on row and column configurations}
   \item{weightmat}{Optional matrix with dissimilarity weights}
   \item{init}{Matrix with starting values for configurations (optional)}
+  \item{fixed}{Do external unfolding by fixing the \code{row} coordinates, \code{column} coordinate, or choose \code{none} (default) to do normal unfolding. Even fixed coordinates are uniformly scaled by a constant to fit the loss function.}
+  \item{fixed.coord}{Matrix with fixed coordinates of the appropriate size.}
   \item{ties}{Tie specification for \code{ordinal} transformations: \code{primary} unties the ties and \code{secondary} keeps the ties tied}
   \item{verbose}{If \code{TRUE}, intermediate stress is printed out}
   \item{relax}{If \code{TRUE}, block relaxation is used for majorization after 100 iterations. It tends to reduce the number of iterations by a factor 2.}
@@ -44,7 +49,7 @@ prefscal(delta, ndim = 2, type = c("ratio", "interval", "ordinal", "mspline"),
   \item{spline.degree}{Degree of the spline for an \code{"mspline"} transformation}
   \item{spline.intKnots}{Number of interior knots of the spline for a \code{"mspline"} transformation}
 }
-\details{Unfolding tries to match a rectangular matrix \code{delta} of dissimilarities between row and column objects by Euclidean distances between row and column points. Badness of fit is measured by raw Stress as the sum of squared differences between \code{delta} and the Euclidean distances. Instead of dissimilarities optimal transformations (dhats) can be found. The dhats should be a function of the original \code{delta} restricted to be \code{"ratio"}, \code{"interval"}, \code{"ordinal"}, or \code{"mspline"}. These transformations can be the same for the entire matrix (\code{conditionality = "matrix"}) of data or different per row (\code{conditionality = "row"}). To avoid a degenerate solution with all dhats and distances equal to 1, the prefscal penalty is is used. A penalty is added based on the variation coefficient of the dhats (mean dhat divided by the standard deviation of the dhats). The penalty width (\code{omega}) weights the penalty and determines from what value of the variation coefficient of the dhats the penalty should become active. The penalty strength (\code{lambda}) is needed to ensure that the penalty can be strong enough. 
+\details{Unfolding tries to match a rectangular matrix \code{delta} of dissimilarities between row and column objects by Euclidean distances between row and column points. Badness of fit is measured by raw Stress as the sum of squared differences between \code{delta} and the Euclidean distances. Instead of dissimilarities optimal transformations (dhats) can be found. The dhats should be a function of the original \code{delta} restricted to be \code{"ratio"}, \code{"interval"}, \code{"ordinal"}, or \code{"mspline"}. These transformations can be the same for the entire matrix (\code{conditionality = "matrix"}) of data or different per row (\code{conditionality = "row"}). To avoid a degenerate solution with all dhats and distances equal to 1, the prefscal penalty is is used. A penalty is added based on the variation coefficient of the dhats (mean dhat divided by the standard deviation of the dhats). The penalty width (\code{omega}) weights the penalty and determines from what value of the variation coefficient of the dhats the penalty should become active. The penalty strength (\code{lambda}) is needed to ensure that the penalty can be strong enough. External unfolding can be done by specifying \code{fixed = "row"} or \code{"column"} and providing the fixed coordinates in \code{fixed.coord}. Then, either the rows or columns are fixed up to a uniform constant.
 
 Creates an object of class \code{smacofR}. 
 }
@@ -102,8 +107,7 @@ plot(res, "stressplot")
 ## Note that ordinal unfolding may need many iterations (several thousands)
 res <- unfolding(breakfast, type = "ordinal", conditionality = "row", omega = 0.1, itmax = 3000)
 res
-## Shepard plot
-plot(res, "Shepard")
+plot(res, "Shepard")      ## Shepard plot
 plot(res)
 }
 
